[gd_scene load_steps=10 format=2]

[ext_resource path="res://scenes/CharacterSelect.tscn" type="PackedScene" id=1]
[ext_resource path="res://packs/waypoints/trappist-1/graphics/HyperSleepChamber.glb" type="PackedScene" id=2]
[ext_resource path="res://packs/waypoints/trappist-1/graphics/card_placement.glb" type="PackedScene" id=3]
[ext_resource path="res://packs/waypoints/trappist-1/scenes/sleepbay.gd" type="Script" id=4]
[ext_resource path="res://scenes/marker.tscn" type="PackedScene" id=5]
[ext_resource path="res://assets/sfx/zapsplat_multimedia_notification_short_digital_futuristic_beep_generic_008_53944.mp3.ogg" type="AudioStream" id=6]
[ext_resource path="res://packs/waypoints/trappist-1/sfx/zapsplat_science_fiction_door_open_hiss_air_release_then_auto_motor_drome_44436.mp3.ogg" type="AudioStream" id=7]

[sub_resource type="BoxShape" id=1]
extents = Vector3( 8.36968, 5.03937, 8.22842 )

[sub_resource type="BoxShape" id=2]
extents = Vector3( 1.74779, 0.081, 1.75034 )

[node name="sleepbay" type="Spatial" groups=[
"card",
]]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.0926189, 0 )
script = ExtResource( 4 )

[node name="p1" type="Position3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1.34058, 2.33526, -1.98868 )

[node name="p2" type="Position3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1.39892, 1.8402, 3.25865 )

[node name="p3" type="Position3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -2.95068, 1.8402, 4.19728 )

[node name="p4" type="Position3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -4.15549, 1.8402, -4.4811 )

[node name="Camera" type="Camera" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 12, 0 )

[node name="characterSelectPoint" type="Position3D" parent="."]
transform = Transform( 0.499131, 0, 0.0294702, 0, 0.5, 0, -0.0294702, 0, 0.499131, 0.534927, 0.599348, -0.548373 )
visible = false

[node name="CharacterSelect" parent="characterSelectPoint" instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.583244, -0.499983, -1.27424 )

[node name="OmniLight" type="OmniLight" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -2.03303, 3.37844, 3.02852 )
shadow_enabled = true
omni_range = 6.29337

[node name="OmniLight2" type="OmniLight" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1.84291, 3.11656, -2.9807 )
shadow_enabled = true
omni_range = 6.08246

[node name="OmniLight3" type="OmniLight" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -9.38685, 3.55252, 2.96379 )
shadow_enabled = true
omni_range = 6.29337

[node name="OmniLight4" type="OmniLight" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -9.40989, 3.28511, -3.03654 )
shadow_enabled = true
omni_range = 6.08246

[node name="HyperSleepChamber" parent="." instance=ExtResource( 2 )]
transform = Transform( 1, 0, 1.19209e-07, 0, 1, 0, -1.19209e-07, 0, 1, -5.56222, -0.838523, -0.203964 )

[node name="Area" type="Area" parent="." groups=[
"card",
"sleepbay",
]]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.106138, 0 )

[node name="CollisionShape" type="CollisionShape" parent="Area"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -5.57194, 3.40858, -0.109973 )
shape = SubResource( 1 )

[node name="path_marker" parent="." instance=ExtResource( 5 )]

[node name="Connectors" type="Spatial" parent="."]

[node name="Connector1" type="Area" parent="Connectors"]
transform = Transform( -2.44381e-07, 0, 1.5, 0, 1.5, 0, -1.5, 0, -2.44381e-07, 5.802, -0.139, 0 )

[node name="CollisionShape" type="CollisionShape" parent="Connectors/Connector1"]
shape = SubResource( 2 )

[node name="card_placement" parent="Connectors/Connector1" instance=ExtResource( 3 )]
transform = Transform( 1, 0, 1.42109e-14, 0, 1, 0, -2.84217e-14, 0, 0.68, 7.45058e-09, 0, -0.0401521 )
visible = false

[node name="Connector2" type="Area" parent="Connectors"]
transform = Transform( 3.75515e-07, 0, -1.5, 0, 1.5, 0, 1.5, 0, 3.75515e-07, -16.883, -0.139, 0 )

[node name="CollisionShape" type="CollisionShape" parent="Connectors/Connector2"]
shape = SubResource( 2 )

[node name="card_placement" parent="Connectors/Connector2" instance=ExtResource( 3 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 0.65, 0, 0, 0 )
visible = false

[node name="Connector3" type="Area" parent="Connectors"]
transform = Transform( -1.5, 0, -3.09948e-07, 0, 1.5, 0, 3.09948e-07, 0, -1.5, -5.587, 0, -11.572 )

[node name="CollisionShape" type="CollisionShape" parent="Connectors/Connector3"]
shape = SubResource( 2 )

[node name="card_placement" parent="Connectors/Connector3" instance=ExtResource( 3 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 0.65, 0, 0, 0 )
visible = false

[node name="Connector4" type="Area" parent="Connectors"]
transform = Transform( 1.5, 0, 4.41082e-07, 0, 1.5, 0, -4.41082e-07, 0, 1.5, -5.511, 0, 11.161 )

[node name="CollisionShape" type="CollisionShape" parent="Connectors/Connector4"]
shape = SubResource( 2 )

[node name="card_placement" parent="Connectors/Connector4" instance=ExtResource( 3 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 0.65, 0, 0, 0 )
visible = false

[node name="Audio" type="Node" parent="."]

[node name="confirm" type="AudioStreamPlayer" parent="Audio"]
stream = ExtResource( 6 )
bus = "sfx"

[node name="AudioStreamPlayer" type="AudioStreamPlayer3D" parent="Audio"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.0926189, 0 )
stream = ExtResource( 7 )
unit_db = 28.0
max_distance = 200.0
bus = "sfx"
[connection signal="character_Select" from="." to="." method="_on_Start_character_Select"]
[connection signal="character_back" from="." to="." method="_on_Start_character_back"]
[connection signal="character_next" from="." to="." method="_on_Start_character_next"]
[connection signal="place" from="." to="." method="_on_sleepbay_place"]
[connection signal="placed" from="." to="." method="_on_Start_placed"]
[connection signal="input_event" from="Area" to="." method="_on_Area_input_event"]

[editable path="HyperSleepChamber"]
